objects/JBCXM__CustomerFeatures__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Features</relationshipLabel>
        <relationshipName>Customer_Features</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__Comment__c</fullName>
        <label>Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Features__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Features</label>
        <referenceTo>JBCXM__Features__c</referenceTo>
        <relationshipLabel>Customer Features</relationshipLabel>
        <relationshipName>Customer_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Licensed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Licensed</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Features</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>NAME</columns>
        <columns>JBCXM__Account__c</columns>
        <columns>JBCXM__Features__c</columns>
        <columns>JBCXM__Enabled__c</columns>
        <columns>JBCXM__Licensed__c</columns>
        <columns>JBCXM__Comment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Features Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>